--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
             <div id="player2-score"></div>
         </div>
 
+        <div id="history">
+            <h3>Guessed Records</h3>
+            <ul id="guessed-records"></ul>
+        </div>
+
         <div id="lower-text"></div>
         </div>
 
